# peclet-morton

./: .gitignore  CITATION.cff  CLAUDE.md  CMakeLists.txt  DEVELOPMENT.md  README.md  bitarray.hpp  bitset_issmaller.cpp  conanfile.py  morton.cpp  morton.hpp  octree.hpp  pyproject.toml
.github/workflows/: ci.yml  docs.yml  quality.yml  release.yml
benchmarks/: CMakeLists.txt  bench.cpp  bench_batch.cpp  bench_kokkos.cpp
bindings/: CMakeLists.txt  morton_c.cpp
bindings/python/: bench_python.py  pyproject.toml
bindings/python/mortonarith/: __init__.py
bindings/python/peclet/morton/: __init__.py
bindings/python/tests/: test_mortonarith.py
cmake/: morton-config.cmake.in
cuda/: CMakeLists.txt  README.md  build_clang.sh
cuda/bench/: bench_cuda.cu
cuda/include/morton_cuda/: morton_cuda.cuh
cuda/tests/: test_cuda.cu
docs/: Doxyfile  EVALUATION.md  HILBERT_GPU_NOTES.md  ROADMAP.md
include/morton/: batch.hpp  hd.hpp  iterate.hpp  kokkos.hpp  morton.hpp  octree.hpp  simd.hpp  wide_uint.hpp
legacy/: bitarray.hpp  octree.hpp  octree_visualize.ipynb
octree/: CMakeLists.txt  PLAN.md  README.md
octree/include/morton_octree/: octree.hpp
octree/tests/: test_octree.cpp
packaging/vcpkg/morton/: portfile.cmake  vcpkg.json
tests/: CMakeLists.txt  test_arithmetic.cpp  test_batch.cpp  test_constexpr.cpp  test_encode_decode.cpp  test_iterate.cpp  test_neighbors.cpp  test_octree.cpp  test_wide.cpp
tests/kokkos/: CMakeLists.txt  test_kokkos.cpp
