[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mortonarith"
version = "0.1.0"
description = "Fast Morton (Z-order) codes with O(1) arithmetic, vectorised for NumPy"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = ["numpy>=1.20"]

[tool.setuptools]
packages = ["mortonarith"]

[tool.setuptools.package-data]
# The native library is produced by CMake (target: mortonarith_c) and dropped
# into the package directory. A production build would use scikit-build-core to
# compile it as part of the wheel; see ROADMAP.md.
mortonarith = ["*.so", "*.dylib", "*.dll"]
